--- a/package.json
+++ b/package.json
@@ -1,18 +1,32 @@
 {
   "name": "otg-web",
   "version": "1.0.0",
-  "main": "main.ts",
+  "main": "main.tsx",
   "repository": "https://github.com/Fusemachines/otg-web.git",
   "author": "pragyakarfuse <pragyakar@fusemachines.com>",
   "license": "MIT",
+  "scripts": {
+    "start": "webpack-dev-server --watch --open"
+  },
   "devDependencies": {
     "@types/react": "^16.9.21",
     "@types/react-dom": "^16.9.5",
+    "compression-webpack-plugin": "^3.1.0",
+    "css-loader": "^3.4.2",
+    "dotenv": "^8.2.0",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "html-webpack-plugin": "^3.2.0",
+    "node-sass": "^4.13.1",
+    "sass-loader": "^8.0.2",
     "source-map-loader": "^0.2.4",
     "ts-loader": "^6.2.1",
+    "tslint": "^6.0.0",
+    "tslint-loader": "^3.5.4",
+    "tslint-microsoft-contrib": "^6.2.0",
     "typescript": "^3.7.5",
     "webpack": "^4.41.6",
-    "webpack-cli": "^3.3.11"
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
     "react": "^16.12.0",
