--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "dotenv": "^8.2.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "html-webpack-plugin": "^3.2.0",
+    "lint-staged": "^10.0.7",
     "node-sass": "^4.13.1",
     "prettier": "^1.19.1",
     "rimraf": "^3.0.2",
