--- a/package.json
+++ b/package.json
@@ -33,12 +33,15 @@
     "css-loader": "^3.4.2",
     "dotenv": "^8.2.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "file-loader": "^5.1.0",
     "html-webpack-plugin": "^3.2.0",
     "lint-staged": "^10.0.7",
     "node-sass": "^4.13.1",
+    "npm-run-all": "^4.1.5",
     "prettier": "^1.19.1",
     "rimraf": "^3.0.2",
     "sass-loader": "^8.0.2",
+    "serve": "^11.3.0",
     "source-map-loader": "^0.2.4",
     "ts-loader": "^6.2.1",
     "tslint": "^6.0.0",
