--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^5.1.0",
     "html-webpack-plugin": "^3.2.0",
+    "husky": "^4.2.3",
     "lint-staged": "^10.0.7",
     "node-sass": "^4.13.1",
     "npm-run-all": "^4.1.5",
