--- a/package.json
+++ b/package.json
@@ -52,7 +52,11 @@
     "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
+    "@types/auth0-js": "^9.12.4",
+    "@types/react-router-dom": "^5.1.3",
+    "auth0-js": "^9.12.2",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2"
   }
 }
