--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "otg-web",
+  "name": "react-webpack-bp",
   "version": "1.0.0",
   "main": "main.tsx",
   "repository": "https://github.com/Fusemachines/otg-web.git",
