--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@types/auth0-js": "^9.12.4",
     "@types/react-router-dom": "^5.1.3",
     "auth0-js": "^9.12.2",
+    "axios": "^0.19.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2"
