--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
   "devDependencies": {
     "@types/react": "^16.9.21",
     "@types/react-dom": "^16.9.5",
+    "@types/react-redux": "^7.1.7",
+    "@types/redux": "^3.6.0",
+    "@types/redux-saga": "^0.10.5",
     "compression-webpack-plugin": "^3.1.0",
     "css-loader": "^3.4.2",
     "dotenv": "^8.2.0",
@@ -56,8 +59,12 @@
     "@types/react-router-dom": "^5.1.3",
     "auth0-js": "^9.12.2",
     "axios": "^0.19.2",
+    "connected-react-router": "^6.8.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-router-dom": "^5.1.2"
+    "react-redux": "^7.2.0",
+    "react-router-dom": "^5.1.2",
+    "redux": "^4.0.5",
+    "redux-saga": "^1.1.3"
   }
 }
