--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build:production": "run-s clean create:production",
     "format": "prettier --write \"src/**/*.{ts, tsx, js}\"",
     "clean": "rimraf dist",
-    "test": "jest"
+    "test": "jest --watch"
   },
   "husky": {
     "hooks": {
@@ -26,6 +26,8 @@
     ]
   },
   "devDependencies": {
+    "@types/enzyme": "^3.10.5",
+    "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/jest": "^25.1.4",
     "@types/react": "^16.9.21",
     "@types/react-dom": "^16.9.5",
@@ -35,11 +37,14 @@
     "compression-webpack-plugin": "^3.1.0",
     "css-loader": "^3.4.2",
     "dotenv": "^8.2.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^5.1.0",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^4.2.3",
     "jest": "^25.1.0",
+    "jest-enzyme": "^7.1.2",
     "lint-staged": "^10.0.7",
     "node-sass": "^4.13.1",
     "npm-run-all": "^4.1.5",
