--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/react-redux": "^7.1.7",
     "@types/redux": "^3.6.0",
     "@types/redux-saga": "^0.10.5",
+    "@types/uuid": "^7.0.2",
     "compression-webpack-plugin": "^3.1.0",
     "css-loader": "^3.4.2",
     "dotenv": "^8.2.0",
